Remove comment/fix spacing

--- a/prop-house-webapp/src/components/StatusPill/StatusPill.module.css
+++ b/prop-house-webapp/src/components/StatusPill/StatusPill.module.css
@@ -1,10 +1,10 @@
 .pillContainer {
   display: inline-block;
-  margin: 1rem 0.75rem;
-  padding: 5px 0.75rem;
+  margin: 0rem 0.75rem;
+  padding: 2.5px 0.65rem;
   border-radius: 50px;
   position: relative;
-  top: -5px;
+  top: -3px;
   font-size: 14px;
   font-weight: 600;
 }
